--- a/src/main/resources/templates/gruppo/aggiunta_membro.html
+++ b/src/main/resources/templates/gruppo/aggiunta_membro.html
@@ -29,6 +29,7 @@
                 <td>
                     <a class="ui primary button"
                        th:href="@{'/gruppi/{idSupergruppo}/add/{idPersona}'( idPersona=${persona.id},idSupergruppo=${supergruppo.id})}">
+                        <i class="icon user"></i>
                         Aggiungi
                     </a>
                 </td>
