--- a/src/main/resources/templates/gruppo/crea_commissione.html
+++ b/src/main/resources/templates/gruppo/crea_commissione.html
@@ -43,7 +43,7 @@
                 </tbody>
             </table>
 
-            <input class="ui button" name="Invia" type="submit">
+            <input class="ui teal button" name="Invia" type="submit">
         </form>
     </div>
 </div>
