--- a/src/main/resources/templates/gruppo/aggiunta_membro.html
+++ b/src/main/resources/templates/gruppo/aggiunta_membro.html
@@ -27,7 +27,7 @@
                 <td th:text="${persona.nome}"></td>
                 <td th:text="${persona.user.getEmail()}"></td>
                 <td>
-                    <a class="ui primary button"
+                    <a class="ui teal button"
                        th:href="@{'/gruppi/{idSupergruppo}/add/{idPersona}'( idPersona=${persona.id},idSupergruppo=${supergruppo.id})}">
                         <i class="icon user"></i>
                         Aggiungi
