--- a/src/main/resources/templates/gruppo/aggiunta_membro_commissione.html
+++ b/src/main/resources/templates/gruppo/aggiunta_membro_commissione.html
@@ -26,7 +26,7 @@
                 <td th:text="${persona.nome}"></td>
                 <td th:text="${persona.user.getEmail()}"></td>
                 <td>
-                    <a class="ui primary button"
+                    <a class="ui teal button"
                        th:href="@{'/gruppi/{idSupergruppo}/add/{idPersona}'( idPersona=${persona.id},idSupergruppo=${supergruppo.id})}">
                         Aggiungi
                     </a>
