--- a/src/main/resources/templates/gruppo/miei_gruppi.html
+++ b/src/main/resources/templates/gruppo/miei_gruppi.html
@@ -31,14 +31,14 @@
                     <span th:if="${gruppo.state==false}"> Chiuso</span>
                 </td>
                 <td>
-                    <a class="ui primary button" th:href="@{/gruppi/} + ${gruppo.id}">
+                    <a class="ui teal button" th:href="@{/gruppi/} + ${gruppo.id}">
                         Visualizza Dettagli
                     </a>
                 </td>
               <td>
 
                   <a th:href="@{'/gruppi/{idSupergruppo}/tasks'  ( idSupergruppo=${gruppo.id} )}"
-                     class="ui primary button">
+                     class="ui teal button">
                         Lista task
                   </a>
               </td>
