Fix style page dettagli_task_personali.html and dettagli_task_supergruppo.html

--- a/src/main/resources/templates/task/dettagli_task_supergruppo.html
+++ b/src/main/resources/templates/task/dettagli_task_supergruppo.html
@@ -123,11 +123,11 @@
                 </div>
             </div>
 
-            <div class="item" style="padding-top: 3%;padding-bottom: 2.5%;">
+            <div class="item" style="padding-top: 3%;padding-bottom: 2.5%; word-wrap: break-word;">
                 <i class="clipboard list icon"></i>
-                <div class="content">
+                <div class="content" style="word-break: break-word;">
                     <div class="header">Descrizione</div>
-                    <div th:text="${task.descrizione}" style="word-wrap: break-word;"></div>
+                    <div th:text="${task.descrizione}"></div>
                 </div>
             </div>
 
