--- a/src/main/resources/templates/task/dettagli_task_personali.html
+++ b/src/main/resources/templates/task/dettagli_task_personali.html
@@ -114,9 +114,9 @@
             </div>
         </div>
 
-        <div class="item" style="padding-top: 3%;padding-bottom: 2.5%;">
+        <div class="item" style="padding-top: 3%;padding-bottom: 2.5%;word-wrap: break-word;">
             <i class="clipboard list icon"></i>
-            <div class="content">
+            <div class="content" style="word-wrap: break-word;word-break: break-word;">
                 <div class="header">Descrizione</div>
                 <div th:text="${task.descrizione}" style="word-wrap: break-word;"></div>
             </div>
