--- a/src/main/resources/templates/gruppo/crea_commissione.html
+++ b/src/main/resources/templates/gruppo/crea_commissione.html
@@ -20,7 +20,7 @@
             <p>Descrizione: <textarea th:field="*{descrizione}"></textarea></p>
 
             <h3>Seleziona Responsabile commissione</h3>
-            <table class="ui celled table">
+            <table class="ui teal table">
                 <thead>
                 <tr class="center aligned">
                     <th>Scelta</th>
