--- a/src/main/resources/templates/gruppo/miei_gruppi.html
+++ b/src/main/resources/templates/gruppo/miei_gruppi.html
@@ -11,7 +11,7 @@
 
 <h1 align="center" class="ui header">I miei gruppi</h1>
 <div class="ui main text container">
-    <table class="ui celled table striped">
+    <table class="ui teal table striped">
         <thead>
         <tr class="center aligned">
             <th>Nome</th>
