--- a/src/main/resources/templates/gruppo/aggiunta_membro_commissione.html
+++ b/src/main/resources/templates/gruppo/aggiunta_membro_commissione.html
@@ -9,7 +9,7 @@
 <h1 align="center" class="ui header">Aggiungi membro alla commissione: <span th:text="${supergruppo.name}"></span></h1>
 
 <div class="ui main text container">
-    <table th:if="${persone.size()>0}" class="ui celled table striped">
+    <table th:if="${persone.size()>0}" class="ui teal table striped">
         <thead>
         <tr class="center aligned">
             <th>Cognome</th>
