--- a/src/main/resources/templates/gruppo/commissione_detail.html
+++ b/src/main/resources/templates/gruppo/commissione_detail.html
@@ -7,7 +7,7 @@
 <div th:insert="fragments/fragments.html :: header"></div>
 <h1 align="center" class="ui header">Membri del <span th:text="${supergruppo.name}"></span></h1>
 <div class="ui main text container">
-    <table class="ui celled table">
+    <table class="ui teal table">
         <thead>
         <tr class="center aligned">
             <th>Cognome</th>
