--- a/src/main/resources/templates/gruppo/aggiunta_membro_commissione.html
+++ b/src/main/resources/templates/gruppo/aggiunta_membro_commissione.html
@@ -28,6 +28,7 @@
                 <td>
                     <a class="ui teal button"
                        th:href="@{'/gruppi/{idSupergruppo}/add/{idPersona}'( idPersona=${persona.id},idSupergruppo=${supergruppo.id})}">
+                        <i class="icon user"></i>
                         Aggiungi
                     </a>
                 </td>
