--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:include="/fragments/fragments.html :: head">
+<head th:include="fragments/fragments.html :: head">
     <title id="pageTitle">Error 404</title>
 </head>
 <body>
