--- a/src/main/resources/templates/gruppo/gruppo_detail.html
+++ b/src/main/resources/templates/gruppo/gruppo_detail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:include="/fragments/fragments.html :: head">
+<head th:include="fragments/fragments.html :: head">
     <title id="pageTitle">Amigo|Dettagli gruppo</title>
 </head>
     <body>
