--- a/src/main/resources/templates/repository/repository.html
+++ b/src/main/resources/templates/repository/repository.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
 
-    <head th:include="/fragments/fragments.html :: head">
+    <head th:include="fragments/fragments.html :: head">
         <title id="pageTitle">Amigo| Repository</title>
     </head>
 </head>
