Add image dashboard.html

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -133,7 +133,7 @@
                     </div>
                     <div class="item">
                         <div class="ui small image">
-                            <img src="img/commissioni.png">
+                            <img src="img/repository.png">
                         </div>
                         <div class="content">
                             <a class="header">Repository d'Ateneo</a>
