--- a/src/main/resources/templates/task/dettagli_task_supergruppo.html
+++ b/src/main/resources/templates/task/dettagli_task_supergruppo.html
@@ -61,7 +61,7 @@
                 <div class="header">Documento</div>
                 <div th:if="${task.getDocumento()}!=null" style="padding-top: 3%;padding-bottom: 2.5%;">
                     <a target="_blank" th:text="${task.documento.getNome()}"
-                       th:href="@{'/documento/{idDocumento}' ( idDocumento=${task.documento.getId()})}">
+                       th:href="@{'/task/{idTask}/attachment' ( idTask=${task.id})}">
                     </a>
                 </div>
                 <div th:if="${task.getDocumento()}==null" style="padding-top: 3%;padding-bottom: 2.5%;">
