--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -29,7 +29,7 @@
                         <input type="password" id="password" name="password" placeholder="password">
                     </div>
                 </div>
-                <div class="ui fluid large teal submit button">Login</div>
+                <button class="ui fluid large teal button" type="submit">Login</button>
             </div>
 
         </form>
