--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -4,7 +4,7 @@
     <title id="pageTitle">Error 404</title>
 </head>
 <body>
-<div class="ui grid middle aligned segment red inverted" style="height: 100%; margin: 0;">
+<div class="ui grid middle aligned segment blue inverted" style="height: 100%; margin: 0;">
     <div class="ui column center aligned">
         <div class="ui inverted statistic">
             <div class="value">404</div>
