--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,10 +6,13 @@
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
-<div class="ui one column stackable center aligned page grid">
-    <div class="column twelve wide" id="div_centeralign">
-        <h1>Benvenuto su amigo!</h1>
-    </div>
+<!--<div class="ui one column stackable center aligned page grid">-->
+<!--    <div class="column twelve wide" id="div_centeralign">-->
+<!--        <h1>Benvenuto su amigo!</h1>-->
+<!--    </div>-->
+<!--</div>-->
+<div class="ui text container">
+    <h1  align="center" > Benvenuto su amigo!</h1>
 </div>
 
 <div class="ui placeholder segment">
@@ -21,8 +24,8 @@
 <!--    <a href="/dashboard">Accedi</a>-->
 <!--</div>-->
 
-<div class="ui button" id="div_button">
-    <a href="/login">Login</a>
+<div  id="div_button">
+    <a class="ui teal button" href="/login">Login</a>
 </div>
 
 
