--- a/src/main/resources/templates/task/crea_task.html
+++ b/src/main/resources/templates/task/crea_task.html
@@ -59,7 +59,7 @@
         </th:block>
         </tbody>
     </table>
-    <button class="ui primary button" type="submit">Crea Task</button>
+    <button class="ui teal button" type="submit">Crea Task</button>
 </form>
 
 </table>
