--- a/src/main/resources/templates/task/dettagli_task_personali.html
+++ b/src/main/resources/templates/task/dettagli_task_personali.html
@@ -82,7 +82,7 @@
                     <input id="file-upload" name="file" required style="display:none" type="file">
                  </span>
 
-                        <input class="ui primary button" name="submit" type="submit" value="Invia"/>
+                        <input class="ui teal button" name="submit" type="submit" value="Invia"/>
                     </form>
 
                 </div>
