--- a/src/main/resources/templates/task/dettagli_task_supergruppo.html
+++ b/src/main/resources/templates/task/dettagli_task_supergruppo.html
@@ -78,7 +78,7 @@
                         > Accetta </a>
                     </td>
                     <td>
-                        <a class="ui primary button"
+                        <a class="ui teal button"
                            th:href="@{'/gruppi/{idSupergruppo}/tasks/task_detail/{idTask}/modifica' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"
                         > Modifica</a>
                     </td>
