--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -8,11 +8,12 @@
     <script th:src="@{/webjars/jquery/jquery.js}"></script>
     <script th:src="@{/webjars/Semantic-UI/semantic.js}"></script>
     <script th:src="@{/index.js}"></script>
+    <script th:src="@{/navbar.js}"></script>
 
 </head>
 <body>
 
-<div class="ui inverted segment stackable"  th:fragment="header">
+<div class="ui inverted segment" th:fragment="header">
     <div class="ui inverted secondary pointing menu">
         <a class="active item" href="/dashboard">
             Home
@@ -40,7 +41,6 @@
         </div>
     </div>
 </div>
-
 
 
 </body>
