--- a/src/main/resources/templates/task/modifica_task.html
+++ b/src/main/resources/templates/task/modifica_task.html
@@ -63,7 +63,7 @@
         </th:block>
         </tbody>
     </table>
-    <button class="ui primary button" type="submit">Aggiorna Task</button>
+    <button class="ui teal button" type="submit">Aggiorna Task</button>
 </form>
 
 </table>
