--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -1,42 +1,10 @@
-<body xmlns:th="http://www.w3.org/1999/xhtml">
-<h1>My Thymeleaf Error Page</h1>
-<table>
-    <tr>
-        <td>Date</td>
-        <td th:text="${timestamp}"/>
-    </tr>
-    <tr>
-        <td>Path</td>
-        <td th:text="${path}"/>
-    </tr>
-    <tr>
-        <td>Error</td>
-        <td th:text="${error}"/>
-    </tr>
-    <tr>
-        <td>Status</td>
-        <td th:text="${status}"/>
-    </tr>
-    <tr>
-        <td>Message</td>
-        <td th:text="${message}"/>
-    </tr>
-    <tr>
-        <td>Exception</td>
-        <td th:text="${exception}"/>
-    </tr>
-    <tr>
-        <td>Trace</td>
-        <td>
-            <pre th:text="${trace}"/>
-        </td>
-    </tr>
-
-    <tr th:if="${status}==403">
-        <td>Status</td>
-        <h2> lodo è bellooooooo</h2>
-        <td th:text="${status} lodo è bello"/>
-    </tr>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:include="fragments/fragments.html :: head">
+    <title id="pageTitle">Error 403</title>
+</head>
+<body>
+<h1>My Thymeleaf 403 Error Page</h1>
 
 
 </table>
