--- a/src/main/resources/templates/consegna/documenti-inviati.html
+++ b/src/main/resources/templates/consegna/documenti-inviati.html
@@ -11,13 +11,7 @@
 <h1 align="center" class="ui header">Documenti inviati</h1>
 <div class="ui main text container">
 
-<!--    <form action="/consegna/inviati" method="get">-->
-<!--        <div class="ui search">-->
-<!--            <div class="ui icon input">-->
-<!--                <input class="prompt" type="text" name="name" placeholder="Nome del documento">-->
-<!--                <input type="submit" value="Cerca"> <i class="search icon"></i> </input>-->
-<!--            </div>-->
-<!--        </div>-->
+    <form action="/consegna/inviati" method="get">
     <div class="row">
         <div class="ui action input" style="float: right; margin-bottom:5px;">
             <input type="text" placeholder="Nome del documento" name="name">
