--- a/src/main/resources/templates/task/dettagli_task_personali.html
+++ b/src/main/resources/templates/task/dettagli_task_personali.html
@@ -60,7 +60,7 @@
             <div class="content">
                 <div class="header">Documento</div>
                 <div th:if="${task.getDocumento()}!=null" style="padding-top: 3%;padding-bottom: 2.5%;">
-                    <a target="_blank" th:text="${task.documento.getNome()}"
+                    <a target=”_blank” th:text="${task.documento.getNome()}"
                        th:href="@{'/task/{idTask}/attachment' ( idTask=${task.id})}">
                     </a>
                 </div>
