--- a/src/main/resources/templates/repository/repository.html
+++ b/src/main/resources/templates/repository/repository.html
@@ -14,7 +14,7 @@
     <div class="row">
 
         <form action="/repository">
-            <a th:if="${flagPQA==1}" class="ui teal right labeled icon button"
+            <a th:if="${flagPQA==true}" class="ui teal right labeled icon button"
                href="/repository/uploadDocumento">
                 Aggiungi <i class="plus icon"></i>
             </a>
